Actualizado el nombre y configuración del proyecto.
Actualizado el .project y el POM de maven para reflejar el cambio de
nombre del proyecto.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>[TFG] Image processing</name>
+	<name>[TFG] Fractal Generator</name>
 	<comment></comment>
 	<projects>
 	</projects>
