--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>tfg</groupId>
-	<artifactId>imageProcessing</artifactId>
+	<artifactId>fractalgenerator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>imageProcessing</name>
+	<name>fractalgenerator</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
