--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>tfg</groupId>
 	<artifactId>fractalgenerator</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>fractalgenerator</name>
@@ -27,7 +27,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>tfg.fractalgenerator.app.App</mainClass>
+							<mainClass>tfg.fractalgenerator.app.MandelbrotsetGeneratorApp</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
