--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Maven's target foulder
-target/
+# Maven's target folder
+target/*
 
 # Include the exported JAR
-!fractalgenerator-*.jar
+!target/fractalgenerator-*.jar
